--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "client": "cd client && npm start",
-    "dev:full": "concurrently \"npm run dev\" \"npm run client\""
+    "client": "cd client && npm run dev",
+    "dev:full": "concurrently \"npm run dev\" \"npm run client\"",
+    "install-client": "cd client && npm install",
+    "build-client": "cd client && npm run build",
+    "install-playwright": "npx playwright install chromium && npx playwright install-deps chromium",
+    "build": "npm install && npm run install-playwright && npm run install-client && npm run build-client"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
