--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev:full": "concurrently \"npm run dev\" \"npm run client\"",
     "install-client": "cd client && npm install",
     "build-client": "cd client && npm run build",
-    "install-playwright": "npx playwright install chromium && npx playwright install-deps chromium",
+    "install-playwright": "npx playwright install chromium",
     "build": "npm install && npm run install-playwright && npm run install-client && npm run build-client"
   },
   "dependencies": {
