--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon server.js",
     "client": "cd client && npm run dev",
     "dev:full": "concurrently \"npm run dev\" \"npm run client\"",
-    "install-client": "cd client && npm install && npm install -D vite",
+    "install-client": "cd client && npm install",
     "build-client": "cd client && npm run build",
     "install-playwright": "npx playwright install chromium",
     "build": "npm install && npm run install-playwright && npm run install-client && npm run build-client"
