--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,11 @@ services:
   - type: web
     name: ScrapeSquad
     env: node
-    buildCommand: npm run build
+    buildCommand: |
+      npm install
+      npx playwright install chromium
+      cd client && npm install
+      cd client && npm run build
     startCommand: node server.js
     envVars:
       - key: NODE_ENV
