--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,10 @@ services:
     name: ScrapeSquad
     env: node
     buildCommand: |
+      apt-get update
+      apt-get install -y ca-certificates fonts-liberation libasound2 libatk-bridge2.0-0 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgbm1 libgcc1 libglib2.0-0 libgtk-3-0 libnspr4 libnss3 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 lsb-release wget xdg-utils
       npm install
-      npx playwright install chromium
+      npx playwright install chromium --with-deps
       cd client && npm install
       cd client && npm run build
     startCommand: node server.js
@@ -18,4 +20,10 @@ services:
       - key: EMAIL_USER
         sync: false
       - key: EMAIL_PASS
-        sync: false 
+        sync: false
+      - key: PLAYWRIGHT_BROWSERS_PATH
+        value: /opt/render/.playwright
+      - key: PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD
+        value: "0"
+      - key: PLAYWRIGHT_BROWSERS_PATH_PREFIX
+        value: /opt/render
