--- a/render.yaml
+++ b/render.yaml
@@ -3,10 +3,34 @@ services:
     name: ScrapeSquad
     env: node
     buildCommand: |
-      apt-get update
-      apt-get install -y ca-certificates fonts-liberation libasound2 libatk-bridge2.0-0 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgbm1 libgcc1 libglib2.0-0 libgtk-3-0 libnspr4 libnss3 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 lsb-release wget xdg-utils
+      # Minimal system dependencies for Playwright
+      apt-get update && \
+      apt-get install -y \
+        libglib2.0-0 \
+        libnss3 \
+        libatk1.0-0 \
+        libatk-bridge2.0-0 \
+        libx11-xcb1 \
+        libxcb1 \
+        libxcomposite1 \
+        libxcursor1 \
+        libxdamage1 \
+        libxext6 \
+        libxfixes3 \
+        libxi6 \
+        libxrandr2 \
+        libxrender1 \
+        libxss1 \
+        libxtst6
+
+      # Install Node dependencies
       npm install
-      npx playwright install chromium --with-deps
+      
+      # Install Playwright with system dependencies
+      PLAYWRIGHT_SKIP_BROWSER_GC=1 npx playwright install-deps chromium
+      PLAYWRIGHT_SKIP_BROWSER_GC=1 npx playwright install chromium
+      
+      # Build client
       cd client && npm install
       cd client && npm run build
     startCommand: node server.js
@@ -25,5 +49,7 @@ services:
         value: /opt/render/.playwright
       - key: PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD
         value: "0"
-      - key: PLAYWRIGHT_BROWSERS_PATH_PREFIX
-        value: /opt/render
+      - key: PLAYWRIGHT_SKIP_BROWSER_GC
+        value: "1"
+      - key: PLAYWRIGHT_CHROMIUM_EXECUTABLE_PATH
+        value: /opt/render/.playwright/chromium-1097/chrome-linux/chrome
