--- a/render.yaml
+++ b/render.yaml
@@ -3,19 +3,20 @@ services:
     name: ScrapeSquad
     env: node
     buildCommand: |
-      # Install Chromium browser
+      # Update and install dependencies
       apt-get update && \
-      apt-get install -y chromium-browser
-      
-      # Set environment variable for Chromium path
-      export CHROME_PATH=$(which chromium-browser)
-      echo "Chrome path: $CHROME_PATH"
-      
+      apt-get install -y wget gnupg ca-certificates
+
+      # Add Chrome repository
+      wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - && \
+      echo "deb http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list
+
+      # Install Chrome
+      apt-get update && \
+      apt-get install -y google-chrome-stable
+
       # Install Node dependencies
       npm install
-      
-      # Skip Playwright browser download since we're using system Chrome
-      export PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD=1
       
       # Build client
       cd client && npm install
@@ -43,10 +44,12 @@ services:
         sync: false
       - key: EMAIL_PASS
         sync: false
-      - key: PLAYWRIGHT_BROWSERS_PATH
-        value: /opt/render/.playwright
       - key: PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD
-        value: "0"
+        value: "1"
+      - key: CHROME_BIN
+        value: "/usr/bin/google-chrome"
+      - key: CHROME_PATH
+        value: "/usr/bin/google-chrome"
       - key: PLAYWRIGHT_SKIP_BROWSER_GC
         value: "1"
       - key: PLAYWRIGHT_CHROMIUM_EXECUTABLE_PATH
