--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ NODE_ENV=production
 EMAIL_USER=vedantdubey.1234@gmail.com
 EMAIL_PASSWORD=ppcw kafm canx ofap
 CLIENT_URL=https://scrapesquad-production.up.railway.app
+VITE_API_URL=https://scrapesquad-production.up.railway.app
